# Streaming_Service_Recommendation_Simulation

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-package.yml
docs/: film_recommender_overview.docx  overview.docx
examples/: demo.ipynb
examples/wandb/: latest-run
film_recommender/: db_connector.py  scorer.py  sql_connector.py  trainer.py  utils.py
film_recommender/wandb/: latest-run
film_recommender_cg/: trainer.py
film_recommender_cg/film_recommender_cg.egg-info/: PKG-INFO
film_recommender_cg/wandb/: latest-run
src/film_recommender/: db_connector.py  scorer.py
tests/: test_scorer.py
wandb/: latest-run
wandb/run-20251107_144753-5os47wal/: run-5os47wal.wandb
wandb/run-20251107_144755-6g1rvnbr/: run-6g1rvnbr.wandb
wandb/run-20251107_144755-q1dr1akr/: run-q1dr1akr.wandb
wandb/run-20251107_144756-nwi8p80h/: run-nwi8p80h.wandb
wandb/run-20251107_144758-x8diorfo/: run-x8diorfo.wandb
wandb/run-20251107_144759-zlx8phlx/: run-zlx8phlx.wandb
wandb/run-20251107_144800-3uqkk4qw/: run-3uqkk4qw.wandb
wandb/run-20251107_144801-ql1umz1l/: run-ql1umz1l.wandb
wandb/run-20251107_144851-ki8e109j/: run-ki8e109j.wandb
wandb/run-20251107_144853-8aoi6vuo/: run-8aoi6vuo.wandb
wandb/run-20251107_144853-ui6dfhyn/: run-ui6dfhyn.wandb
wandb/run-20251107_144854-h6kbzjj4/: run-h6kbzjj4.wandb
wandb/run-20251107_144855-47p0msv8/: run-47p0msv8.wandb
wandb/run-20251107_144855-keat3fpi/: run-keat3fpi.wandb
wandb/run-20251107_144856-31wi6ccb/: run-31wi6ccb.wandb
(+347 files in other folders)
