[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1.0"
description = "A Film Recommendation Engine Package"
authors = [{ name = "Curtis Gribben", email = "curtisgribben1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["pandas", "numpy"]

[tool.setuptools.packages.find]
where = ["film_recommender"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sklearn.exceptions.UndefinedMetricWarning"
]